# onum

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  pyproject.toml
python/onum/: __init__.py  __init__.pyi
src/: abconj.rs  abs2.rs  cis.rs  lib.rs  ufunc.rs  ufuncs.rs  utils.rs
src/ufuncs/: abconj.rs  abs2.rs
