[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "onum"
version = "0.1.0"
description = "Numerical utilities"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "Maxwell Nogueira Peixoto", email = "maxwellpxt@gmail.com" },
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy",
]

[tool.maturin]
python-source = "python"
